@@ -11,6 +11,8 @@ You are looking at a CVS snapshot of the REL_1_2 branch.
 ---------------------------------------------------------------------------
 
 Version 1.1.7 (?? ??? 2007)
+  - Changed default installation user/password to root/none
+  - Added read/write test to db_cache /tmp folder
   - The following translations were updated:
     French
 
